+server: hostname display +solution: folder organisation

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-COMP445_LA1/Release
+COMP445_LA1/COMP445_LA1 Server/Release
+COMP445_LA1/COMP445_LA1 Server/Debug
+COMP445_LA1/COMP445_LA1 Client/Release
+COMP445_LA1/COMP445_LA1 Client/Debug
 COMP445_LA1/Debug
-COMP445_LA1/COMP445_LA1/Release
-COMP445_LA1/COMP445_LA1/Debug
-COMP445_LA1/ipch
-COMP445_LA1/COMP445_LA1/*.filters
-COMP445_LA1/COMP445_LA1/*.user
+COMP445_LA1/Release
+*.filters
+*.user
