+code from examples
We need to implement the code for the client to test this.

--- a/COMP445_LA1/COMP445_LA1 Server/COMP445_LA1 Server.vcxproj
+++ b/COMP445_LA1/COMP445_LA1 Server/COMP445_LA1 Server.vcxproj
@@ -76,16 +76,20 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ftpd_tcp.h" />
+    <ClInclude Include="myThread.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TCPThread.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="COMP445_LA1 Server.cpp" />
     <ClCompile Include="ftpd_tcp.cpp" />
+    <ClCompile Include="myThread.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TCPThread.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
